--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+  <nav>
+  <%=link_to "Главная", root_path%>
+  <%if current_user%>
+  <%=link_to "Выйти", destroy_user_session_path, 'data-turbo-method': :delete%>
+  <%else%>
+    <%= link_to "Авторизация",new_user_session_path%>
+    <%= link_to "Регистрация",new_user_registration_path%>
+  <%end%>
+  </nav>
     <%= yield %>
   </body>
 </html>
