--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <nav>
   <%=link_to "Главная", root_path%>
   <%if current_user%>
+  <%=link_to "Добавить категорию" , new_category_path%>
   <%=link_to "Выйти", destroy_user_session_path, 'data-turbo-method': :delete%>
   <%else%>
     <%= link_to "Авторизация",new_user_session_path%>
